--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pidong/soru-slack-client",
-  "version": "0.1.3",
+  "version": "0.1.3-beta1",
   "description": "A slack client",
   "repository": {
     "type": "git",
